
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ pos; unsigned long* key; } ;
typedef TYPE_1__ rk_state ;


 unsigned long LOWER_MASK ;
 int M ;
 unsigned long MATRIX_A ;
 int N ;
 scalar_t__ RK_STATE_LEN ;
 unsigned long UPPER_MASK ;

unsigned long rk_random(rk_state *state) {
  unsigned long y;

  if (state->pos == RK_STATE_LEN) {
    int i;

    for (i = 0; i < N - M; i++) {
      y = (state->key[i] & UPPER_MASK) | (state->key[i + 1] & LOWER_MASK);
      state->key[i] = state->key[i + M] ^ (y >> 1) ^ (-(y & 1) & MATRIX_A);
    }
    for (; i < N - 1; i++) {
      y = (state->key[i] & UPPER_MASK) | (state->key[i + 1] & LOWER_MASK);
      state->key[i] =
          state->key[i + (M - N)] ^ (y >> 1) ^ (-(y & 1) & MATRIX_A);
    }
    y = (state->key[N - 1] & UPPER_MASK) | (state->key[0] & LOWER_MASK);
    state->key[N - 1] = state->key[M - 1] ^ (y >> 1) ^ (-(y & 1) & MATRIX_A);

    state->pos = 0;
  }
  y = state->key[state->pos++];


  y ^= (y >> 11);
  y ^= (y << 7) & 0x9d2c5680UL;
  y ^= (y << 15) & 0xefc60000UL;
  y ^= (y >> 18);

  return y;
}
